Fixed spacing for skills section

--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ header {
 }
 
 .menuItem a {
-    color: #222222;
+    color: #202939;
+    font-weight: normal;
 }
 
 
@@ -112,21 +113,22 @@ header {
 
 
 /* Hero styles */
+.hero-information {
+    margin-top: 32px;
+    margin-bottom: 40px;
+}
 
 .hero {
-    margin-top: 20px;
-    padding-top: 30px;
+    margin-top: 84px;
     /* background-color: #faedcd; */
     margin-left: 300px;
     margin-right: 300px;
-    margin-bottom: 20px;
-    padding-bottom: 30px;
 }
 
 .hero h2 {
     font-size: 40px;
     margin: 0;
-    margin-bottom: 20px !important;
+    margin-bottom: 10px !important;
     padding: 0;
     color: #202939;
     text-align: center;
@@ -139,26 +141,30 @@ header {
 }
 
 .hero h1 {
-    font-weight: bold;
+    font-weight: 500;
     font-size: 20px;
     /* color: #222222; */
+    margin: 0;
     color: #202939 !important;
-    margin: 24px 0;
+    margin-bottom: 10px;
 }
 
 .hero p {
     margin: 0;
-    margin-bottom: 24px;
     padding: 0 !important;
     text-align: center;
     /* margin-left: 25px;
     margin-right: 25px; */
     font-size: 18px;
-    line-height: 1.5;
+    line-height: 28px;
 }
 
-.hero button {
-    margin-bottom: 60px;
+.hero-btn {
+    margin: 0 !important;
+}
+
+.hero-btn button {
+    margin: 0;
 }
 
 #desc-link {
@@ -243,6 +249,10 @@ hr {
 }
 
 /* Skills Styles  */
+.skills-wrapper {
+    margin-top: 126px;
+}
+
 .skills-container { 
     align-items: center;
     display: flex;
@@ -251,7 +261,7 @@ hr {
     gap: 16px;
     justify-content: center;
     /* max-width: -30rem; */
-    margin: 5px 0;
+    /* margin: 5px 0; */
     padding: 0px 20px;
 }
 
@@ -264,7 +274,7 @@ hr {
     font-size: 28px;
     color: #202939;
     text-align: center;
-    margin-left: 20px;
+    margin: 0;
 }
 
 li {
@@ -694,6 +704,10 @@ label {
     }
 
     /* Font Options */
+    .hero {
+        margin-top: 48px;
+    }
+
     .hero h1 {
         font-size: 18px;
     }
@@ -701,10 +715,11 @@ label {
     #hero-text {
         text-align: center;
         font-size: 32px;
-        line-height: 36px;
+        line-height: 40px;
         margin: 0;
         padding: 0;
         margin-bottom: 24px;
+        padding: 0 20px;
     }
 
 
@@ -714,6 +729,7 @@ label {
         padding: 0;
         margin-bottom: 24px;
         text-align: center;
+        padding: 0 20px !important;
 
     }
 
